# Cleo

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sitecustomize.py
apps/api/src/cleo_api/: __init__.py  main.py
apps/api/src/cleo_api/routes/: __init__.py  chat.py
apps/cli/src/cleo_cli/: __init__.py  main.py
apps/desktop-macos/: Package.swift  local_bridge.py
apps/desktop-macos/AppBundle/: Info.plist
apps/desktop-macos/AppBundle/Resources/: Cleo.icns
apps/desktop-macos/Sources/CleoOverlay/: AppDelegate.swift  Branding.swift  CleoAPIClient.swift  CleoOverlayApp.swift  HotKeyManager.swift  OverlayPanelController.swift  OverlayView.swift  OverlayViewModel.swift  PointerTracker.swift  ScreenContextCapture.swift  VoiceInputController.swift  WakeWordController.swift
apps/desktop-macos/scripts/: build_app.sh  clean_state.sh  install_runtime.sh  reset_permissions.sh  run_app.sh
apps/mobile/: App.tsx  app.json  package.json
cleo/: __init__.py  graph.py  report.py  storage.py  youtube_parser.py
docs/: architecture.md
scripts/: generate_report.py  import_youtube.py
