[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cleo-assistant"
version = "0.1.0"
description = "Starter architecture for a cross-platform personal AI assistant."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "typer>=0.12.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.scripts]
cleo = "cleo_cli.main:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [
  "apps/api/src",
  "apps/cli/src",
  "packages/assistant-core/src",
]

